# FastAI

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.py
FastAI/: __init__.py  basic_network.py  clusters.py  cnn_network.py  decision_tree.py  eazy_models.py  image_classificer.py  kneighbors.py  prepare_data.py  prepare_image.py  prepare_sound.py  sound_analiser.py  text_classificer.py
tests/: test_all.py  test_basic_network.py  test_clusters.py  test_cnn_network.py  test_decision_tree.py  test_eazy_models.py  test_image_classificer.py  test_kneighbors.py  test_sound_analiser.py  test_text_classificer.py
