[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastai-simple"
version = "0.1.0"
authors = [
    {name = "MihaBEST", email = "mihailkuvanin@gmail.com"}
]
description = "Быстрая библиотека для машинного обучения и нейросетей"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = ["machine-learning", "ai", "neural-networks", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.10.0",
    "librosa>=0.9.0",
    "soundfile>=0.11.0",
    "Pillow>=9.0.0",
]

[project.urls]
"Homepage" = "https://github.com/MihaBEST/FastAI"
"Bug Tracker" = "https://github.com/MihaBEST/FastAI/issues"

[tool.setuptools]
packages = ["FastAI"]